<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/view_camera_and_title"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_details_label"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/item_description_hint"
        android:id="@+id/item_description"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/item_date"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/item_delete"
        android:layout_gravity="center"
        android:text="@string/item_delete"
        />

</LinearLayout>
